--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,21 @@
 
         <div class="f--container">
             <div class="f--row">
+                <div class="f--col-12">
+                    <h2 class="f--font-c js--reveal-it">js--reveal-it"</h2>
+                </div>
+            </div>
+        </div>
+        <div class="f--container">
+            <div class="f--row">
+                <div class="f--col-12">
+                    <hr />
+                </div>
+            </div>
+        </div>
+
+        <div class="f--container">
+            <div class="f--row">
                 <div class="f--col-6 f--col-tabletm-12">
                     <h3 class="f--font-c f--sp-d">Simple Collapse</h3>
                     <p class="f--font-e f--sp-d">It can start as expanded or collapsed. You just need to add/remove '--is-active' class and toggle aria attributes.</p>
@@ -50,10 +65,10 @@
                 <div class="f--col-6 f--col-tabletm-12">
                     <pre class="c--code-a">
                         <label class="c--code-a__label">JS</label>
-              <code class="c--code-a__content">
-    var SimpleExample = new Collapsify()
-              </code>
-          </pre>
+                    <code class="c--code-a__content">
+                    var SimpleExample = new Collapsify()
+                    </code>
+                </pre>
                     <div class="c--note-a">
                         <p>
                             Data attributes (ID):<br />
