--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-
+<div class="box" style="width: 100px; height: 100px; background:red;">test</div>
 
     <div class="f--container">
         <div class="f--row">
