--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,27 @@
     <div class="f--container">
         <div class="f--row">
             <div class="f--col-12">
-                <div class="f--font-a f--sp-a f--mt-3">Reveal It <span class="f--font-c">By Terra</span></div>
-                <ul class="f--font-e f--mt-3 f--mb-5">
-                    <li>element (HTMLElement): The DOM element to which the reveal animation will be applied.</li>
-                    <li>isActive (boolean): Returns true if the animation is currently playing.</li>
-                    <li>play (function): Method to start the reveal animation.</li>
-                    <li>pause (function): Method to pause the reveal animation.</li>
-                    <li>getAnimation (function): Returns the GSAP timeline instance for more advanced control.</li>
-                    <li>duration (number): Duration of the animation in seconds.</li>
-                    <li>opacity (number): Target opacity for the animation.</li>
-                    <li>yoyo (boolean) = true: Enables yoyo effect, making the animation repeat in reverse.</li>
-                    <li>repeat (number) = -1: Defines the number of times the animation should repeat. -1 for infinite.
-                    </li>
+                <h2 class="f--font-a f--sp-c">Reveal It <span class="f--font-c">By Terra</span></h2>
+                <p class="f--font-e f--sp-c">
+                    <strong>Reveal It</strong> is a sophisticated JavaScript module designed to animate web elements with finesse and precision. Leveraging the power of GSAP and its ScrollTrigger plugin, this library offers developers a versatile tool to create engaging, scroll-triggered animations that respond to user interactions and viewport changes.
+                </p>
+                <p class="f--font-e f--sp-c">
+                    Crafted with responsiveness in mind, <strong>Reveal It</strong> integrates seamlessly with dynamic web applications, providing a rich set of features to control animations based on viewport size. Whether you aim to enhance user experience on mobile devices or create captivating effects on desktop screens, <strong>Reveal It</strong> delivers with its adaptive and efficient animation capabilities.
+                </p>
+                <h3 class="f--font-d">Key Features:</h3>
+                <ul class="f--font-e f--sp-c">
+                    <li>Responsive Animation Controls: Tailor animations with breakpoint-specific configurations to ensure optimal display across all devices.</li>
+                    <li>Advanced GSAP Integration: Utilize the full power of GSAP for smooth, high-performance animations with the added capability of ScrollTrigger for viewport-based triggers.</li>
+                    <li>Mobile-First Design: With an option to enable or disable animations on mobile devices, <strong>Reveal It</strong> ensures that your site's performance and user experience are paramount.</li>
+                    <li>Developer-Friendly: Built with ease of integration in mind, it requires minimal setup to get started, yet allows for deep customization for more complex scenarios.</li>
                 </ul>
+                <p class="f--font-e">
+                    Whether you're a front-end novice or an experienced developer, <strong>Reveal It</strong> provides the tools you need to bring your web elements to life. Dive into the documentation below to start creating animations that truly stand out.
+                </p>
             </div>
         </div>
     </div>
+    
 
     <div class="f--container">
         <div class="f--row">
