--- a/src/index.html
+++ b/src/index.html
@@ -138,13 +138,13 @@
                 </p>
 
                 <!-- Multiple elements with RevealIt animations -->
-                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black;">
+                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black; padding:.5rem;">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 </div>
-                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black;">
+                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black; padding:.5rem;">
                     <p>Donec nec nisl at libero vulputate rutrum...</p>
                 </div>
-                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black;">
+                <div class="c--content-a js--reveal-it--multiple f--sp-c" style="border: 1px solid black; padding:.5rem;">
                     <p>Ut aliquet tristique nisl vitae volutpat...</p>
                 </div>
 
@@ -207,7 +207,7 @@ document.querySelectorAll('.js--reveal-it--multiple').forEach(function(element) 
                     Animation</button>
 
                 <!-- Example element with the custom RevealIt animation -->
-                <div class="c--content-a js--reveal-it-custom f--sp-c" style="border: 1px solid black;">
+                <div class="c--content-a js--reveal-it-custom f--sp-c" style="border: 1px solid black; padding:.5rem;">
                     <p>Custom reveal animation with specific parameters...</p>
                 </div>
             </div>
@@ -264,7 +264,7 @@ function () {
                 </p>
     
                 <!-- Example element for the RevealIt animation with callbacks -->
-                <div class="c--content-a js--reveal-it-callback f--sp-c" style="border: 1px solid black;">
+                <div class="c--content-a js--reveal-it-callback f--sp-c" style="border: 1px solid black; padding:.5rem;">
                     <p>Element with RevealIt animation and callbacks...</p>
                 </div>
     
