--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
                 <p class="f--font-e f--sp-c">
                     Crafted with responsiveness in mind, <strong>Reveal It</strong> integrates seamlessly with dynamic web applications, providing a rich set of features to control animations based on viewport size. Whether you aim to enhance user experience on mobile devices or create captivating effects on desktop screens, <strong>Reveal It</strong> delivers with its adaptive and efficient animation capabilities.
                 </p>
-                <h3 class="f--font-d">Key Features:</h3>
+                
                 <ul class="f--font-e f--sp-c">
-                    <li>Responsive Animation Controls: Tailor animations with breakpoint-specific configurations to ensure optimal display across all devices.</li>
-                    <li>Advanced GSAP Integration: Utilize the full power of GSAP for smooth, high-performance animations with the added capability of ScrollTrigger for viewport-based triggers.</li>
-                    <li>Mobile-First Design: With an option to enable or disable animations on mobile devices, <strong>Reveal It</strong> ensures that your site's performance and user experience are paramount.</li>
-                    <li>Developer-Friendly: Built with ease of integration in mind, it requires minimal setup to get started, yet allows for deep customization for more complex scenarios.</li>
+                    <li><strong>Responsive Animation Controls:</strong> Tailor animations with breakpoint-specific configurations to ensure optimal display across all devices.</li>
+                    <li><strong>Advanced GSAP Integration:</strong>Advanced GSAP Integration: Utilize the full power of GSAP for smooth, high-performance animations with the added capability of ScrollTrigger for viewport-based triggers.</li>
+                    <li><strong>Mobile-First Design:</strong> With an option to enable or disable animations on mobile devices, <strong>Reveal It</strong> ensures that your site's performance and user experience are paramount.</li>
+                    <li><strong>Developer-Friendly:</strong> Built with ease of integration in mind, it requires minimal setup to get started, yet allows for deep customization for more complex scenarios.</li>
                 </ul>
                 <p class="f--font-e">
                     Whether you're a front-end novice or an experienced developer, <strong>Reveal It</strong> provides the tools you need to bring your web elements to life. Dive into the documentation below to start creating animations that truly stand out.
