--- a/src/index.html
+++ b/src/index.html
@@ -325,11 +325,16 @@ function () {
                 <h3 class="f--font-c f--sp-d">ScrollTrigger with RevealIt Animations</h3>
                 <p class="f--font-e f--sp-d">
                     This example demonstrates how to integrate ScrollTrigger into RevealIt animations. ScrollTrigger allows animations to be triggered based on scroll position, enhancing user interaction and engagement.
+
                 </p>
-    
+
+                <p class="f--font-e f--sp-d">
+                    Scroll to see...
+                    </p>
                 <!-- Example element for the RevealIt animation with ScrollTrigger -->
-                <div class="c--content-a js--reveal-it-scrolltrigger f--sp-c" style="border: 1px solid black; margin-top: 50vh;">
-                    <p>Scroll to see the animation triggered by ScrollTrigger...</p>
+
+                <div class="c--content-a js--reveal-it-scrolltrigger f--sp-c" style="border: 1px solid black; margin-top: 50vh;  padding:.5rem;">
+                    <p>...the animation triggered by ScrollTrigger</p>
                 </div>
             </div>
             <div class="f--col-6 f--col-tabletm-12">
